tests/baselines/reference/reExportAliasMakesInstantiated.errors.txt
reExportAliasMakesInstantiated.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reExportAliasMakesInstantiated.ts(5,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reExportAliasMakesInstantiated.ts(11,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reExportAliasMakesInstantiated.ts(15,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== reExportAliasMakesInstantiated.ts (4 errors) ====
    declare module pack1 {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      const test1: string;
      export { test1 };
    }
    declare module pack2 {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      import test1 = pack1.test1;
      export { test1 };
    }
    export import test1 = pack2.test1;
    
    declare module mod1 {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      type test1 = string;
      export { test1 };
    }
    declare module mod2 {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      import test1 = mod1.test1;
      export { test1 };
    }
    const test2 = mod2; // Possible false positive instantiation, but ok
    